--- a/src/experiment/resources/pictures/pictures.component.html
+++ b/src/experiment/resources/pictures/pictures.component.html
@@ -1,7 +1,20 @@
 <nz-page-header [nzGhost]="false">
   <nz-page-header-title>图片</nz-page-header-title>
   <nz-page-header-tags>
-    <nz-select style="min-width: 180px" nzMode="multiple" nzPlaceHolder="筛选标签" nzAllowClear nzBorderless>
+    <nz-select
+      style="min-width: 180px"
+      nzMode="multiple"
+      nzPlaceHolder="筛选标签"
+      nzAllowClear
+      nzBorderless
+      [(ngModel)]="ref.tagIds"
+      [nzServerSearch]="true"
+      (nzOnSearch)="ref.getTags($event)"
+      (ngModelChange)="ref.getData(true)"
+    >
+      <ng-container *ngFor="let item of ref.tagOptions">
+        <nz-option [nzLabel]="item.name" [nzValue]="item._id"></nz-option>
+      </ng-container>
     </nz-select>
   </nz-page-header-tags>
   <nz-page-header-extra>
@@ -9,9 +22,18 @@
       <ng-container *nzSpaceItem>
         <ng-container *ngTemplateOutlet="ref.uploadRef"></ng-container>
       </ng-container>
-      <button *nzSpaceItem nz-button nzType="primary" nzShape="circle" nz-tooltip="设置分类" i18n-nz-tooltip>
-        <i nz-icon nzType="setting"></i>
-      </button>
+      <ng-container *nzSpaceItem>
+        <button
+          nz-button
+          nzType="primary"
+          nzShape="circle"
+          nz-tooltip="设置标签"
+          i18n-nz-tooltip
+          (click)="ref.openTags()"
+        >
+          <i nz-icon nzType="tags"></i>
+        </button>
+      </ng-container>
     </nz-space>
   </nz-page-header-extra>
   <nz-page-header-content>
