--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import 'https://cdn.kainonly.com/assets/ng-zorro-antd/ng-zorro-antd.compact.min.css';
 @import 'https://cdn.kainonly.com/assets/ng-zorro-antd/code-editor/index.min.css';
 @import 'https://cdn.kainonly.com/assets/ng-zorro-antd/resizable/index.min.css';
+@import 'https://cdn.kainonly.com/assets/cropperjs/cropper.min.css';
 
 body {
   background-color: #f0f2f5;
