--- a/src/app/admin/settings/audit/login-logs/login-logs.component.html
+++ b/src/app/admin/settings/audit/login-logs/login-logs.component.html
@@ -41,24 +41,40 @@
   >
     <thead>
       <tr>
-        <th style="padding: 8px 4px" nzLeft nzWidth="240px">
-          <span style="margin: 0 3px" nz-icon nzType="field-time"></span>
+        <th
+          nzWidth="60px"
+          nzLeft
+          nzAlign="center"
+          [nzChecked]="dataset.checked"
+          [nzIndeterminate]="dataset.indeterminate"
+          (nzCheckedChange)="dataset.setNChecked($event)"
+        >
+        </th>
+        <th nzLeft nzWidth="240px">
           <b i18n>时间戳</b>
         </th>
         <th><b i18n>用户</b></th>
         <th><b i18n>模式</b></th>
         <th><b i18n>地区 ISP</b></th>
+        <th nzWidth="60px" nzRight nzAlign="center">
+          <button nz-button nzType="text" nzBlock disabled>
+            <i nz-icon nzType="setting"></i>
+          </button>
+        </th>
       </tr>
     </thead>
     <tbody>
       <ng-container *ngFor="let data of basicTable.data">
         <tr>
           <td
-            style="padding: 8px 4px"
             nzLeft
-            [nzExpand]="expands.has(data._id)"
-            (nzExpandChange)="expandsChange(data._id, $event)"
+            nzAlign="center"
+            [nzDisabled]="data['disabled']"
+            [nzChecked]="dataset.checkedIds.has(data['_id'])"
+            (nzCheckedChange)="dataset.setChecked(data['_id'], $event)"
           >
+          </td>
+          <td nzLeft [nzExpand]="expands.has(data._id)" (nzExpandChange)="expandsChange(data._id, $event)">
             {{ data['timestamp'] | date : 'yyyy-MM-dd HH:mm:ss' }}
           </td>
           <td>
@@ -84,12 +100,21 @@
               <span *nzSpaceItem i18n>{{ !data.isp ? '未知' : data.isp }}</span>
             </nz-space>
           </td>
+          <td nzRight nzAlign="center">
+            <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="menu">
+              <i nz-icon nzType="ellipsis"></i>
+            </button>
+            <nz-dropdown-menu #menu="nzDropdownMenu">
+              <ul nz-menu>
+                <li nz-menu-item i18n>标记</li>
+              </ul>
+            </nz-dropdown-menu>
+          </td>
         </tr>
         <tr [nzExpand]="expands.has(data._id)">
-          <td style="padding: 8px 4px"> </td>
-          <td colspan="4">
+          <div style="padding: 3.5px 4px">
             <code>{{ data.user_agent }}</code>
-          </td>
+          </div>
         </tr>
       </ng-container>
     </tbody>
