--- a/src/experiment/resources/pictures/pictures.component.html
+++ b/src/experiment/resources/pictures/pictures.component.html
@@ -72,7 +72,7 @@
   </nz-page-header-content>
 </nz-page-header>
 
-<div style="padding: 8px 8px 24px; height: calc(100% - 76px)">
+<div style="padding: 6px; height: calc(100% - 116px)">
   <wpx-media-view #ref wpxType="pictures" [wpxFallback]="['assets', 'photon.svg'] | wpxAssets"></wpx-media-view>
 </div>
 
