--- a/src/experiment/plugins/richtext/richtext.component.html
+++ b/src/experiment/plugins/richtext/richtext.component.html
@@ -1,14 +1,16 @@
-<nz-card>
-  <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
-    <nz-form-item>
-      <nz-form-control>
-        <wpx-richtext formControlName="content" (ngModelChange)="test($event)"></wpx-richtext>
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-control>
-        <button nz-button nzType="primary" [disabled]="!form.valid">提交</button>
-      </nz-form-control>
-    </nz-form-item>
-  </form>
-</nz-card>
+<div style="padding: 6px">
+  <nz-card>
+    <form nz-form nzLayout="vertical" [formGroup]="form" (wpxSubmit)="submit($event)">
+      <nz-form-item>
+        <nz-form-control>
+          <wpx-richtext formControlName="content" (ngModelChange)="test($event)"></wpx-richtext>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-control>
+          <button nz-button nzType="primary" [disabled]="!form.valid">提交</button>
+        </nz-form-control>
+      </nz-form-item>
+    </form>
+  </nz-card>
+</div>
