update: richtext & cdn

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@import 'https://cdn.kainonly.com/assets/ng-zorro-antd/ng-zorro-antd.compact.min.css';
-@import 'https://cdn.kainonly.com/assets/ng-zorro-antd/code-editor/index.min.css';
-@import 'https://cdn.kainonly.com/assets/ng-zorro-antd/resizable/index.min.css';
-@import 'https://cdn.kainonly.com/assets/cropperjs/cropper.min.css';
+@import 'https://cdn.kainonly.com/npm/ng-zorro-antd@15.1.0/ng-zorro-antd.compact.min.css';
+@import 'https://cdn.kainonly.com/npm/ng-zorro-antd@15.1.0/code-editor/style/index.min.css';
+@import 'https://cdn.kainonly.com/npm/ng-zorro-antd@15.1.0/resizable/style/index.min.css';
+@import 'https://cdn.kainonly.com/npm/cropperjs@1.5.13/dist/cropper.min.css';
 
 body {
   background-color: #f0f2f5;
