--- a/src/experiment/plugins/richtext/richtext.component.html
+++ b/src/experiment/plugins/richtext/richtext.component.html
@@ -3,11 +3,7 @@
     <form nz-form nzLayout="vertical" [formGroup]="form" (wpxSubmit)="submit($event)">
       <nz-form-item>
         <nz-form-control>
-          <wpx-richtext
-            formControlName="content"
-            (ngModelChange)="test($event)"
-            wpxPlaceholder="直接输入正文"
-          ></wpx-richtext>
+          <app-richtext formControlName="content" (ngModelChange)="test($event)"> </app-richtext>
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
