update: editor & cdn

--- a/src/experiment/experiment.component.html
+++ b/src/experiment/experiment.component.html
@@ -4,6 +4,7 @@
       <li nz-menu-group nzTitle="插件">
         <ul>
           <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'plugins', 'richtext']">块编辑器</li>
+          <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'plugins', 'editor']">代码编辑器</li>
           <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'plugins', 'store']">本地存储</li>
           <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'plugins', 'table']">动态表格</li>
           <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'plugins', 'upload']">上传</li>
