update: nzComponentParams of NzModal change to nzData, fix deprecated usage in rxjs

--- a/src/app/admin/orgs/users/developer/form/form.component.html
+++ b/src/app/admin/orgs/users/developer/form/form.component.html
@@ -8,7 +8,7 @@
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-label [nzRequired]="!doc" i18n> 密码 </nz-form-label>
+        <nz-form-label [nzRequired]="!data" i18n> 密码 </nz-form-label>
         <nz-form-control nzHasFeedback nzExtra="非必须，为空不更新" i18n-nzExtra [nzAutoTips]="tips.password">
           <nz-input-group [nzSuffix]="suffixTemplate">
             <ng-template #suffixTemplate>
