--- a/src/experiment/experiment.component.html
+++ b/src/experiment/experiment.component.html
@@ -39,7 +39,7 @@
     </ul>
   </nz-sider>
   <nz-layout>
-    <nz-content>
+    <nz-content style="overflow: auto">
       <router-outlet></router-outlet>
     </nz-content>
   </nz-layout>
