--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -46,7 +46,7 @@
       <nz-divider nzPlain nzText="其他方式登录" i18n-nzText></nz-divider>
       <nz-space>
         <a *nzSpaceItem nz-tooltip="飞书" i18n-nz-tooltip (click)="feishuOAuth()">
-          <nz-avatar [nzSize]="30" nzShape="square" [nzSrc]="['assets', 'lark.svg'] | wpxAssets"></nz-avatar>
+          <nz-avatar [nzSize]="30" nzShape="square" [nzSrc]="['assets', 'Feishu-Avatar.png'] | wpxAssets"></nz-avatar>
         </a>
       </nz-space>
     </form>
