--- a/src/experiment/experiment.component.html
+++ b/src/experiment/experiment.component.html
@@ -1,20 +1,20 @@
 <nz-layout class="common-layout" style="padding-left: 0">
   <nz-sider nzTheme="light">
     <ul nz-menu nzMode="inline">
+      <li nz-menu-group nzTitle="资源">
+        <ul>
+          <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'resources', 'pictures']"> 图片 & 标签 </li>
+          <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'resources', 'videos']"> 视频 & 标签 & 所属 </li>
+          <li nz-menu-item nzDisabled> 音频 </li>
+          <li nz-menu-item nzDisabled> 文档 </li>
+        </ul>
+      </li>
       <li nz-menu-group nzTitle="插件">
         <ul>
           <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'plugins', 'richtext']">块编辑器</li>
           <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'plugins', 'editor']">代码编辑器</li>
           <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'plugins', 'store']">本地存储</li>
           <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'plugins', 'upload']">上传</li>
-        </ul>
-      </li>
-      <li nz-menu-group nzTitle="资源">
-        <ul>
-          <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'resources', 'pictures']"> 图片 & 通用标签 </li>
-          <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'resources', 'videos']"> 视频 & 定制标签 </li>
-          <li nz-menu-item nzDisabled> 音频 </li>
-          <li nz-menu-item nzDisabled> 文档 </li>
         </ul>
       </li>
       <li nz-menu-group nzTitle="引擎">
