--- a/src/experiment/resources/pictures/form/form.component.html
+++ b/src/experiment/resources/pictures/form/form.component.html
@@ -5,6 +5,24 @@
       <input nz-input type="text" formControlName="name" placeholder="请填写显示名称" i18n-placeholder />
     </nz-form-control>
   </nz-form-item>
+  <nz-form-item>
+    <nz-form-label i18n>标签</nz-form-label>
+    <nz-form-control>
+      <nz-select
+        nzMode="multiple"
+        nzPlaceHolder="请选择标签"
+        i18n-nzPlaceHolder
+        nzAllowClear
+        formControlName="tags"
+        [nzServerSearch]="true"
+        (nzOnSearch)="getTags($event)"
+      >
+        <ng-container *ngFor="let item of tagItems">
+          <nz-option [nzLabel]="item.name" [nzValue]="item._id"></nz-option>
+        </ng-container>
+      </nz-select>
+    </nz-form-control>
+  </nz-form-item>
 </form>
 
 <div *nzModalFooter>
